--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/bioicon.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>La Milla</title>
+    <title>BioGarden</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
